--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                 <li><i class="fa fa-evelope"></i><a href="#">ndifon.titian@gmail.com</a></li>
                <li> <i class="fa fa-phone"></i> +237672168101</li>
                 <li><i class="fa fa-location"></i>Bamenda,Cameroon</li>
-               <li> <i class="fa fa-linkedln icon"></i><a href="#">www.linkedln.com/in/ndifon-titian</a></li>
+               <li> <i class="fa fa-linkedln icon"></i><a href="www.linkedln.com/in/ndifon-titian">www.linkedln.com/in/ndifon-titian</a></li>
+                <li><i class="fa fa-upwork icom"></i><a href="https://www.upwork.com/freelancers/~01e3d22c5f4575c33e?viewMode=1">https://www.upwork.com/freelancers/~01e3d22c5f4575c33e?viewMode=1</a><li>
             </ul>
                 
             </P>
